Fix: Set default text alignment to center

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
   line-height: 1.7;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center; /* Center text by default */
 }
 
 h1, h2, h3 {
